--- a/reports/FIREFOX_47.0.1_XP_home.xml
+++ b/reports/FIREFOX_47.0.1_XP_home.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <testsuites errors="0"
             failures="0"
-            tests="8">
+            tests="9">
 
   <testsuite name="home"
     errors="0" failures="0" hostname="" id="" package="home" skipped="0"
-    tests="8" time="7.367" timestamp="Mon, 24 Oct 2016 20:35:20 GMT">
+    tests="9" time="7.893" timestamp="Tue, 01 Nov 2016 20:34:15 GMT">
   
-    <testcase name="Load sunmapper.com" time="4.117" assertions="3">
+    <testcase name="Load sunmapper.com" time="4.918" assertions="3">
 
     
 
@@ -16,47 +16,50 @@
     
     </testcase>
   
-    <testcase name="Welcomescreen visible" time="0.05700" assertions="1">
+    <testcase name="Welcomescreen visible" time="0.07600" assertions="1">
 
     
     </testcase>
   
-    <testcase name="Header autocomplete suggestions" time="0.6960" assertions="2">
-
-    
-
-    
-    </testcase>
-  
-    <testcase name="Main autocomplete suggestions" time="0.7400" assertions="4">
-
-    
-
-    
+    <testcase name="Header autocomplete suggestions" time="0.8290" assertions="2">
 
     
 
     
     </testcase>
   
-    <testcase name="Load specific housepage" time="1.059" assertions="1">
+    <testcase name="Main autocomplete suggestions" time="0.7880" assertions="4">
+
+    
+
+    
+
+    
 
     
     </testcase>
   
-    <testcase name="Specific housepage autocomplete suggestions" time="0.6490" assertions="2">
+    <testcase name="Menu expands on mobile" time="0.000" assertions="0">
+    </testcase>
+  
+    <testcase name="Load specific housepage" time="0.6020" assertions="1">
+
+    
+    </testcase>
+  
+    <testcase name="Specific housepage autocomplete suggestions" time="0.6260" assertions="2">
 
     
 
     
     </testcase>
   
-    <testcase name="Correct house" time="0.02100" assertions="1">
+    <testcase name="Correct house" time="0.02000" assertions="1">
 
     
     </testcase>
   
-    <testcase name="Find leverandører visible" time="0.02800" assertions="1">
+    <testcase name="Find leverandører visible" time="0.03400" assertions="1">
 
     
     </testcase>
