--- a/reports/FIREFOX_47.0.1_XP_home.xml
+++ b/reports/FIREFOX_47.0.1_XP_home.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <testsuites errors="0"
             failures="0"
-            tests="9">
+            tests="12">
 
   <testsuite name="home"
     errors="0" failures="0" hostname="" id="" package="home" skipped="0"
-    tests="9" time="7.805" timestamp="Tue, 01 Nov 2016 20:46:33 GMT">
+    tests="12" time="20.37" timestamp="Wed, 02 Nov 2016 21:41:06 GMT">
   
-    <testcase name="Load sunmapper.com" time="4.864" assertions="3">
+    <testcase name="Load sunmapper.com" time="7.290" assertions="3">
 
     
 
@@ -16,50 +16,65 @@
     
     </testcase>
   
-    <testcase name="Welcomescreen visible" time="0.05000" assertions="1">
+    <testcase name="Welcomescreen visible" time="0.05300" assertions="1">
 
     
     </testcase>
   
-    <testcase name="Header autocomplete suggestions" time="0.7370" assertions="2">
-
-    
-
-    
-    </testcase>
-  
-    <testcase name="Main autocomplete suggestions" time="0.7100" assertions="4">
-
-    
-
-    
+    <testcase name="Header autocomplete suggestions" time="0.8040" assertions="2">
 
     
 
     
     </testcase>
   
-    <testcase name="Menu expands on mobile" time="0.001000" assertions="0">
-    </testcase>
-  
-    <testcase name="Load specific housepage" time="0.5150" assertions="1">
+    <testcase name="Main autocomplete suggestions" time="0.7180" assertions="4">
 
     
-    </testcase>
-  
-    <testcase name="Specific housepage autocomplete suggestions" time="0.8310" assertions="2">
+
+    
 
     
 
     
     </testcase>
   
-    <testcase name="Correct house" time="0.06000" assertions="1">
+    <testcase name="Menu expands on mobile" time="0.000" assertions="0">
+    </testcase>
+  
+    <testcase name="Click the loop for searching" time="0.000" assertions="0">
+    </testcase>
+  
+    <testcase name="Load specific housepage" time="0.5360" assertions="1">
 
     
     </testcase>
   
-    <testcase name="Find leverandører visible" time="0.03700" assertions="1">
+    <testcase name="Correct house" time="0.02400" assertions="1">
+
+    
+    </testcase>
+  
+    <testcase name="Find leverandører visible" time="0.03800" assertions="1">
+
+    
+    </testcase>
+  
+    <testcase name="Uddyb button working with close" time="10.11" assertions="1">
+
+    
+    </testcase>
+  
+    <testcase name="Find supplier modal visible" time="0.1400" assertions="2">
+
+    
+
+    
+    </testcase>
+  
+    <testcase name="Specific housepage autocomplete suggestions" time="0.6520" assertions="2">
+
+    
 
     
     </testcase>
