--- a/reports/CHROME_54.0.2840.71_XP_home.xml
+++ b/reports/CHROME_54.0.2840.71_XP_home.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <testsuites errors="0"
             failures="0"
-            tests="9">
+            tests="12">
 
   <testsuite name="home"
     errors="0" failures="0" hostname="" id="" package="home" skipped="0"
-    tests="9" time="6.862" timestamp="Tue, 01 Nov 2016 20:46:45 GMT">
+    tests="12" time="6.626" timestamp="Wed, 02 Nov 2016 21:37:18 GMT">
   
-    <testcase name="Load sunmapper.com" time="3.786" assertions="3">
+    <testcase name="Load sunmapper.com" time="3.716" assertions="3">
 
     
 
@@ -16,19 +16,15 @@
     
     </testcase>
   
-    <testcase name="Welcomescreen visible" time="0.02700" assertions="1">
+    <testcase name="Welcomescreen visible" time="0.02800" assertions="1">
 
     
     </testcase>
   
-    <testcase name="Header autocomplete suggestions" time="0.6650" assertions="2">
-
-    
-
-    
+    <testcase name="Header autocomplete suggestions" time="0.000" assertions="0">
     </testcase>
   
-    <testcase name="Main autocomplete suggestions" time="0.8230" assertions="4">
+    <testcase name="Main autocomplete suggestions" time="0.7980" assertions="4">
 
     
 
@@ -39,29 +35,62 @@
     
     </testcase>
   
-    <testcase name="Menu expands on mobile" time="0.000" assertions="0">
-    </testcase>
-  
-    <testcase name="Load specific housepage" time="0.8300" assertions="1">
-
-    
-    </testcase>
-  
-    <testcase name="Specific housepage autocomplete suggestions" time="0.6530" assertions="2">
+    <testcase name="Menu expands on mobile" time="0.1400" assertions="2">
 
     
 
     
     </testcase>
   
-    <testcase name="Correct house" time="0.04600" assertions="1">
+    <testcase name="Click the loop for searching" time="0.000" assertions="0">
+    </testcase>
+  
+    <testcase name="Load specific housepage" time="0.9160" assertions="1">
 
     
     </testcase>
   
-    <testcase name="Find leverandører visible" time="0.03200" assertions="1">
+    <testcase name="Correct house" time="0.07100" assertions="1">
 
     
+    </testcase>
+  
+    <testcase name="Find leverandører visible" time="0.05600" assertions="1">
+
+    
+    </testcase>
+  
+    <testcase name="Uddyb button working with close" time="0.7450" assertions="10">
+
+    
+
+    
+
+    
+
+    
+
+    
+
+    
+
+    
+
+    
+
+    
+
+    
+    </testcase>
+  
+    <testcase name="Find supplier modal visible" time="0.1550" assertions="2">
+
+    
+
+    
+    </testcase>
+  
+    <testcase name="Specific housepage autocomplete suggestions" time="0.001000" assertions="0">
     </testcase>
   
   
