--- a/reports/MICROSOFTEDGE_undefined_ANY_home.xml
+++ b/reports/MICROSOFTEDGE_undefined_ANY_home.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <testsuites errors="0"
-            failures="0"
-            tests="9">
+            failures="1"
+            tests="12">
 
   <testsuite name="home"
-    errors="0" failures="0" hostname="" id="" package="home" skipped="0"
-    tests="9" time="5.445" timestamp="Tue, 01 Nov 2016 20:46:55 GMT">
+    errors="0" failures="1" hostname="" id="" package="home" skipped="1"
+    tests="12" time="10.17" timestamp="Wed, 02 Nov 2016 21:45:51 GMT">
   
-    <testcase name="Load sunmapper.com" time="2.616" assertions="3">
+    <testcase name="Load sunmapper.com" time="1.825" assertions="3">
 
     
 
@@ -16,19 +16,19 @@
     
     </testcase>
   
-    <testcase name="Welcomescreen visible" time="0.01800" assertions="1">
+    <testcase name="Welcomescreen visible" time="0.01900" assertions="1">
 
     
     </testcase>
   
-    <testcase name="Header autocomplete suggestions" time="0.6170" assertions="2">
+    <testcase name="Header autocomplete suggestions" time="0.6260" assertions="2">
 
     
 
     
     </testcase>
   
-    <testcase name="Main autocomplete suggestions" time="0.7160" assertions="4">
+    <testcase name="Main autocomplete suggestions" time="0.6970" assertions="4">
 
     
 
@@ -42,28 +42,39 @@
     <testcase name="Menu expands on mobile" time="0.000" assertions="0">
     </testcase>
   
-    <testcase name="Load specific housepage" time="0.8130" assertions="1">
+    <testcase name="Click the loop for searching" time="0.000" assertions="0">
+    </testcase>
+  
+    <testcase name="Load specific housepage" time="0.7720" assertions="1">
 
     
     </testcase>
   
-    <testcase name="Specific housepage autocomplete suggestions" time="0.6280" assertions="2">
-
-    
-
-    
-    </testcase>
-  
-    <testcase name="Correct house" time="0.01900" assertions="1">
+    <testcase name="Correct house" time="0.02000" assertions="1">
 
     
     </testcase>
   
-    <testcase name="Find leverandører visible" time="0.01800" assertions="1">
+    <testcase name="Find leverandører visible" time="0.02100" assertions="1">
 
     
     </testcase>
   
+    <testcase name="Uddyb button working with close" time="2.646" assertions="0">
+    </testcase>
+  
+    <testcase name="Find supplier modal visible" time="3.540" assertions="1">  <failure message="Testing if element &lt;.get-offer-modal&gt; is visible.">    at Object.module.exports.Find supplier modal visible (F:\git-projekter\testing\nightwatch\sunmapper-testing\tests\home.js:90:21)</failure>
+
+    
+    </testcase>
+  
+  
+    
+    <testcase
+      name="Specific housepage autocomplete suggestions">
+      <skipped />
+    </testcase>
+    
   
   </testsuite>
 </testsuites>
